--- a/src/ui/manufacturer.fxml
+++ b/src/ui/manufacturer.fxml
@@ -11,22 +11,21 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ViewerController">
+<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+           prefHeight="600.0" prefWidth="800.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171"
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ManufacturerController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
             <HBox alignment="TOP_CENTER" prefHeight="55.0" prefWidth="760.0" spacing="5.0">
                <children>
-                  <ComboBox fx:id="searchOptions" prefHeight="25.0" prefWidth="107.0">
+                  <ComboBox fx:id="searchOptions" prefHeight="25.0" prefWidth="107.0" value="Registration">
                      <items>
                         <FXCollections fx:factory="observableArrayList">
                            <String fx:value="Registration" />
                            <String fx:value="Make, Model" />
                         </FXCollections>
                      </items>
-                     <value>
-                        <String fx:value="Registration" />
-                     </value>
                   </ComboBox>
                   <TextField fx:id="searchText" prefHeight="25.0" prefWidth="558.0" />
                   <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearchButton" text="Search" />
@@ -36,9 +35,10 @@
                </padding>
             </HBox>
             <TableView prefHeight="524.0" prefWidth="760.0" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="33.0" prefWidth="760.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="33.0" prefWidth="760.0" spacing="5.0">
                <children>
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButton" prefHeight="15.0" prefWidth="105.0" text="Back" />
+                  <Button fx:id="addCarButton" mnemonicParsing="false" onAction="#handleAddCar" text="Add Car" />
+                  <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="15.0" prefWidth="105.0" text="Logout" />
                </children>
             </HBox>
          </children>
