--- a/src/ui/manufacturer.fxml
+++ b/src/ui/manufacturer.fxml
@@ -11,15 +11,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-           prefHeight="600.0" prefWidth="800.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171"
-           xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ManufacturerController">
+<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ManufacturerController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
             <HBox alignment="TOP_CENTER" prefHeight="55.0" prefWidth="760.0" spacing="5.0">
                <children>
-                  <ComboBox fx:id="searchOptions" prefHeight="25.0" prefWidth="107.0" value="Registration">
+                  <ComboBox fx:id="searchOptions" prefHeight="25.0" prefWidth="138.0" value="Registration">
                      <items>
                         <FXCollections fx:factory="observableArrayList">
                            <String fx:value="Registration" />
@@ -28,7 +26,7 @@
                      </items>
                   </ComboBox>
                   <TextField fx:id="searchText" prefHeight="25.0" prefWidth="558.0" />
-                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearchButton" text="Search" />
+                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearchButton" prefHeight="25.0" prefWidth="113.0" text="Search" />
                </children>
                <padding>
                   <Insets top="5.0" />
