--- a/src/ui/viewer.fxml
+++ b/src/ui/viewer.fxml
@@ -17,15 +17,15 @@
          <children>
             <HBox alignment="TOP_CENTER" prefHeight="55.0" prefWidth="760.0" spacing="5.0">
                <children>
-                  <ComboBox fx:id="searchOptions" prefHeight="25.0" prefWidth="132.0">
+                  <ComboBox fx:id="searchOptions" onAction="#handleSearchOptions" prefHeight="25.0" prefWidth="146.0">
                      <items>
                         <FXCollections fx:factory="observableArrayList">
-                           <String fx:value="Registration" />
+                           <String fx:value="Registration No." />
                            <String fx:value="Make, Model" />
                         </FXCollections>
                      </items>
                      <value>
-                        <String fx:value="Registration" />
+                        <String fx:value="Registration No." />
                      </value>
                   </ComboBox>
                   <TextField fx:id="searchText" prefHeight="25.0" prefWidth="558.0" />
