--- a/src/ui/addEditDialog.fxml
+++ b/src/ui/addEditDialog.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -9,11 +10,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <DialogPane prefHeight="322.0" prefWidth="578.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.AddEditDialogController">
-   <header>
-      <Label text="Car Information" />
-   </header>
    <content>
-      <GridPane hgap="1.0" vgap="20.0">
+      <GridPane hgap="1.0" prefHeight="249.0" prefWidth="578.0" vgap="20.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="0.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,6 +20,7 @@
           <RowConstraints />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,10 +37,6 @@
             <Label text="Quantity" GridPane.rowIndex="7" />
             <TextField fx:id="regText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="yearText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="makeText" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="modelText" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField fx:id="quantityText" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
                   <TextField fx:id="color1Text" />
@@ -49,7 +44,23 @@
                   <TextField fx:id="color3Text" />
                </children>
             </HBox>
+            <TextField fx:id="makeText" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="modelText" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="quantityText" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <children>
+                  <Button fx:id="addCarButton" mnemonicParsing="false" onAction="#handleAddCarButton" text="Add" />
+               </children>
+            </HBox>
          </children>
       </GridPane>
    </content>
+   <header>
+      <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="46.0" prefWidth="578.0">
+         <children>
+            <Label text="Enter Car Information" />
+         </children>
+      </HBox>
+   </header>
 </DialogPane>
