--- a/src/ui/viewAndManageCars.fxml
+++ b/src/ui/viewAndManageCars.fxml
@@ -29,7 +29,7 @@
                         <String fx:value="Make, Model" />
                      </value>
                   </ComboBox>
-                  <TextField fx:id="searchText" onAction="#handleSearchField" prefHeight="25.0" prefWidth="571.0" />
+                  <TextField fx:id="searchText" prefHeight="25.0" prefWidth="571.0" />
                   <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearchButton" prefHeight="25.0" prefWidth="113.0" text="Search" />
                   <Button fx:id="viewAllButton" mnemonicParsing="false" onAction="#handleViewAllButton" text="View All" />
                </children>
