--- a/src/ui/viewAndManageCars.fxml
+++ b/src/ui/viewAndManageCars.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@uiStyles.css"
-           xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ViewAndManageCarsController">
+<StackPane fx:id="viewerContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.ViewAndManageCarsController">
    <children>
       <VBox prefHeight="580.0" prefWidth="831.0" spacing="10.0">
          <children>
@@ -29,7 +28,7 @@
                         <String fx:value="Make, Model" />
                      </value>
                   </ComboBox>
-                  <TextField fx:id="searchText" prefHeight="25.0" prefWidth="571.0" />
+                  <TextField fx:id="searchText" onAction="#handleSearchButton" prefHeight="25.0" prefWidth="571.0" />
                   <Button fx:id="searchButton" mnemonicParsing="false" onAction="#handleSearchButton" prefHeight="25.0" prefWidth="113.0" text="Search" />
                   <Button fx:id="viewAllButton" mnemonicParsing="false" onAction="#handleViewAllButton" text="View All" />
                </children>
