--- a/src/ui/addEditDialog.fxml
+++ b/src/ui/addEditDialog.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<DialogPane prefHeight="322.0" prefWidth="578.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.AddEditDialogController">
+<DialogPane fx:id="addEditDialog" prefHeight="322.0" prefWidth="578.0" stylesheets="@uiStyles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.AddEditDialogController">
    <content>
       <GridPane hgap="1.0" prefHeight="249.0" prefWidth="578.0" vgap="20.0">
         <columnConstraints>
@@ -48,12 +48,6 @@
             <TextField fx:id="modelText" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField fx:id="quantityText" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
-               <children>
-                  <Button fx:id="editCar" mnemonicParsing="false" onAction="#handleEditCarButton" text="Edit Car" />
-                  <Button fx:id="addCar" mnemonicParsing="false" onAction="#handleAddCarButton" text="Add Car" />
-               </children>
-            </HBox>
          </children>
       </GridPane>
    </content>
